# multi-op-qso-logger

./: .gitignore  .gitmodules  Cargo.toml  MIT.license  README.md  version.js
.github/: dependabot.yml
.github/workflows/: dev.yml  main.yml  thread.yml
public/: index.html
public/js/: index.js
src/: index.html  internet.js  main.js  setup.html  setup.js  styles.css  update.html  update.js  updater.js  window.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/js/: index.js
