[package]
name = "multi-op-qso-logger"
version = "0.2.0-5"
description = "Multi Operator QSO Logger"
authors = ["Austin Hadley <admin@austinh.dev> @ H2 Technologies"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = ["devtools"] }
tauri-plugin-http = { version = "2.0.0-alpha.4", features = ["json"] }
tauri-plugin-process = "2.0.0-alpha"
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
# tauri-plugin-sql = "2.0.0-alpha"
tauri-plugin-updater = "2.0.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
